backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: profertility-backend
  namespace: profertility
spec:
  selector:
    app: profertility-backend
  ports:
    - protocol: TCP
      port: 7005
      targetPort: 7005
