backend/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-api-route
  namespace: profertility
spec:
  parentRefs:
    - name: profertility-gateway
  hostnames:
    - "api.mojasim.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: profertility-backend
          port: 7005
